--- a/public/child-progress.html
+++ b/public/child-progress.html
@@ -7,119 +7,10 @@
     <title>My Progress - LearnToBot</title>
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="navbar.css">
     <script src="analytics.js"></script>
     <style>
-        /* Navbar Styles from Index.html (Overrides kids-theme.css) */
-        .navbar {
-            background: rgba(7, 31, 78, 0.95) !important;
-            backdrop-filter: blur(10px);
-            border-bottom: 2px solid #3B82F6 !important;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5) !important;
-        }
-
-        .navbar-brand {
-            color: #E5E7EB;
-        }
-
-        .navbar-brand:hover {
-            color: #3B82F6;
-            transform: scale(1.05);
-        }
-
-        .navbar-link {
-            color: #9CA3AF;
-            font-weight: 600;
-            padding: 8px 10px;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .navbar-link:hover {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.1);
-        }
-
-        .navbar-link.active {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.15);
-        }
-
-        .navbar-link.active::after {
-            content: '';
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            right: 0;
-            height: 2px;
-            background: #3B82F6;
-        }
-
-        .navbar-btn {
-            background: #3B82F6 !important;
-            box-shadow: none;
-            transition: all 0.3s ease;
-        }
-
-        .navbar-btn:hover {
-            background: #2563EB !important;
-            transform: translateY(-2px) !important;
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4) !important;
-        }
-
-        /* User Profile Pill */
-        .user-profile-pill {
-            display: flex;
-            align-items: center;
-            background: rgba(31, 41, 55, 0.8);
-            border: 1px solid #374151;
-            border-radius: 30px;
-            padding: 5px 15px;
-            gap: 15px;
-            margin-right: 10px;
-            backdrop-filter: blur(5px);
-            transition: all 0.3s ease;
-            cursor: default;
-        }
-
-        .user-profile-pill:hover {
-            border-color: #3B82F6;
-            background: rgba(31, 41, 55, 0.95);
-            transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        .user-points {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            color: #FBBF24;
-            font-weight: 700;
-            font-size: 1.05em;
-            border-right: 1px solid #4B5563;
-            padding-right: 15px;
-        }
-
-        .user-info {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        #userNameDisplay {
-            color: #E5E7EB;
-            font-weight: 600;
-            font-size: 0.95em;
-        }
-
-        .user-headshot-nav {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid #3B82F6;
-            background: #1F2937;
-        }
+        /* Navbar styles moved to navbar.css */
 
         /* Page Specific Styles */
         .progress-header {
@@ -618,8 +509,7 @@
                 <li><a href="/" class="navbar-link">Projects</a></li>
                 <li><a href="/my-projects.html" class="navbar-link" id="navMyProjects" style="display: none;">My
                         Projects</a></li>
-                <li><a href="/child-progress.html" class="navbar-link active">Student Progress</a>
-                </li>
+                <li><a href="/child-progress.html" class="navbar-link active">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
                 <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link" id="navAnalytics"
@@ -1045,7 +935,16 @@
             window.location.href = '/';
         }
 
-        document.addEventListener('DOMContentLoaded', loadPageData);
+        document.addEventListener('DOMContentLoaded', () => {
+            // [NEW] Show My Projects link if logged in
+            const currentStudent = localStorage.getItem('currentStudent');
+            if (currentStudent) {
+                const myProjectsLink = document.getElementById('navMyProjects');
+                if (myProjectsLink) myProjectsLink.style.display = 'block';
+            }
+
+            loadPageData();
+        });
     </script>
 </body>
 
