--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="navbar.css">
     <style>
         :root {
             --gold: #FFD700;
@@ -28,101 +29,7 @@
             overflow-x: hidden;
         }
 
-        /* Fixed Navbar Overlay - Merged with Robust Layout */
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: rgba(17, 24, 39, 0.9) !important;
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
-            z-index: 1000;
-            padding: 0 20px;
-        }
-
-        .navbar-container {
-            max-width: 1400px;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 70px;
-        }
-
-        .navbar-brand {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            color: #E5E7EB;
-            text-decoration: none;
-            font-size: 1.5em;
-            font-weight: 700;
-            transition: all 0.3s ease;
-        }
-
-        .navbar-brand:hover {
-            color: #3B82F6;
-            transform: scale(1.05);
-        }
-
-        .navbar-logo {
-            font-size: 1.8em;
-        }
-
-        .navbar-menu {
-            display: flex;
-            align-items: center;
-            gap: 15px !important;
-            list-style: none;
-        }
-
-        .navbar-link {
-            color: #9CA3AF;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 1em;
-            padding: 8px 12px !important;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .navbar-link:hover {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.1);
-        }
-
-        .navbar-link.active {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.15);
-        }
-
-        .navbar-auth {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
-        .navbar-btn {
-            background: #3B82F6;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 0.95em;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .navbar-btn:hover {
-            background: #2563EB;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
-        }
+        /* Navbar styles moved to navbar.css */
 
         .page-content {
             max-width: 1200px;
@@ -736,12 +643,11 @@
             </a>
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
-                <li><a href="/my-projects.html" class="navbar-link">My Projects</a></li>
-                <li><a href="/child-progress.html" class="navbar-link" style="display: none;">Student Progress</a>
-                </li>
+                <li><a href="/my-projects.html" class="navbar-link" id="navMyProjects" style="display: none;">My
+                        Projects</a></li>
+                <li><a href="/child-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link active">Leaders</a></li>
-                <!-- Teacher Panel Link Removed -->
                 <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link" id="navAnalytics"
                         style="display: none;">Analytics</a></li>
                 <li><a href="/instructor-dashboard.html" class="navbar-link">Instructors</a></li>
@@ -859,6 +765,10 @@
             // Show Pill immediately if logged in
             if (pill) pill.style.display = 'flex';
             if (nameEl) nameEl.textContent = currentStudent;
+
+            // [NEW] Show My Projects link
+            const myProjectsLink = document.getElementById('navMyProjects');
+            if (myProjectsLink) myProjectsLink.style.display = 'block';
 
             try {
                 // We can reuse the same API call or wait for fetchLeaderboard
