--- a/public/project.html
+++ b/public/project.html
@@ -7,6 +7,7 @@
     <title>LearnToBot Class - Project</title>
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="navbar.css">
     <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         /* Styles delegated to kids-theme.css */
@@ -28,52 +29,7 @@
             align-items: center;
         }
 
-        /* USER PROFILE PILL STYLES */
-        .user-profile-pill {
-            display: flex;
-            align-items: center;
-            background: rgba(31, 41, 55, 0.8);
-            border: 1px solid #374151;
-            border-radius: 30px;
-            padding: 5px 15px;
-            gap: 15px;
-            margin-right: 15px;
-            backdrop-filter: blur(5px);
-            transition: all 0.3s ease;
-            cursor: default;
-        }
 
-        .user-points {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            color: #FBBF24;
-            font-weight: 700;
-            font-size: 1.05em;
-            border-right: 1px solid #4B5563;
-            padding-right: 15px;
-        }
-
-        .user-info {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .user-name {
-            color: #E5E7EB;
-            font-weight: 600;
-            font-size: 0.95em;
-        }
-
-        .user-headshot-nav {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid #3B82F6;
-            background-color: #111827;
-        }
 
         /* VIDEO PLAYER STYLES */
         .video-player-container video {
@@ -310,96 +266,7 @@
             background: white !important;
         }
 
-        /* NAVBAR STYLES (Matched to index.html) */
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: rgba(7, 31, 78, 0.95) !important;
-            backdrop-filter: blur(10px);
-            border-bottom: 2px solid #3B82F6 !important;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5) !important;
-            z-index: 1000;
-            padding: 0 20px;
-        }
-
-        .navbar-container {
-            max-width: 1400px;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 100%;
-        }
-
-        .navbar-brand {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            color: #E5E7EB;
-            text-decoration: none;
-            font-size: 1.5em;
-            font-weight: 700;
-            transition: all 0.3s ease;
-        }
-
-        .navbar-brand:hover {
-            color: #3B82F6;
-            transform: scale(1.05);
-        }
-
-        .navbar-link {
-            color: #9CA3AF;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 1em;
-            padding: 8px 10px;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .navbar-link:hover {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.1);
-        }
-
-        .navbar-btn {
-            background: #3B82F6 !important;
-            color: white !important;
-            padding: 10px 20px;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .navbar-btn:hover {
-            background: #2563EB !important;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
-        }
-
-        .user-profile-pill {
-            display: flex;
-            align-items: center;
-            background: rgba(31, 41, 55, 0.8);
-            border: 1px solid #374151;
-            border-radius: 30px;
-            padding: 5px 15px;
-            gap: 15px;
-            margin-right: 10px;
-            backdrop-filter: blur(5px);
-        }
-
-        .user-points {
-            color: #FBBF24;
-            font-weight: 700;
-            border-right: 1px solid #4B5563;
-            padding-right: 15px;
-        }
+        /* Navbar styles moved to navbar.css */
 
         /* VIDEO PLAYER STYLES */
         .video-player-container video {
@@ -754,7 +621,8 @@
 
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
-                <li><a href="/my-projects.html" class="navbar-link">My Projects</a></li>
+                <li><a href="/my-projects.html" class="navbar-link" id="navMyProjects" style="display: none;">My
+                        Projects</a></li>
                 <li><a href="/child-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
@@ -851,6 +719,10 @@
                 // Show Pill immediately if logged in
                 if (pill) pill.style.display = 'flex';
                 if (nameEl) nameEl.textContent = currentStudent;
+
+                // [NEW] Show My Projects link
+                const myProjectsLink = document.getElementById('navMyProjects');
+                if (myProjectsLink) myProjectsLink.style.display = 'block';
 
                 try {
                     const response = await fetch('/api/leaderboard');
